Cleaned up comments. Fixed keyboard text to be html

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,25 +2,27 @@
 <html>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <!-- meta name="viewport" content="width=device-width" -->
+      
+    <!-- The following viewport code is intended to fullscreen the cockpit and prevent scrolling -->
+    <meta id="Viewport" name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <script type='text/javascript' src="js/libs/jquery.min.js"></script>
+    <script type='text/javascript' src="js/libs/jquery-ui.min.js"></script>	
 
-<meta id="Viewport" name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-        <script type='text/javascript' src="js/libs/jquery.min.js"></script>
-        <script type='text/javascript' src="js/libs/jquery-ui.min.js"></script>	
-<script type="text/javascript">
-$(function(){
-if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
-  var ww = ( $(window).width() < window.screen.width ) ? $(window).width() : window.screen.width; //get proper width
-  var mw = 480; // min width of site
-  var ratio =  ww / mw; //calculate ratio
-  if( ww < mw){ //smaller than minimum size
-   $('#Viewport').attr('content', 'initial-scale=' + ratio + ', maximum-scale=' + ratio + ', minimum-scale=' + ratio + ', user-scalable=yes, width=' + ww);
-  }else{ //regular size
-   $('#Viewport').attr('content', 'initial-scale=1.0, maximum-scale=2, minimum-scale=1.0, user-scalable=yes, width=' + ww);
-  }
-}
-});
-</script>    
+    <script type="text/javascript">
+    // this code again helps prevent scrolling and sets viewport for mobile 
+    $(function(){
+    if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
+      var ww = ( $(window).width() < window.screen.width ) ? $(window).width() : window.screen.width; //get proper width
+      var mw = 480; // min width of site
+      var ratio =  ww / mw; //calculate ratio
+      if( ww < mw){ //smaller than minimum size
+       $('#Viewport').attr('content', 'initial-scale=' + ratio + ', maximum-scale=' + ratio + ', minimum-scale=' + ratio + ', user-scalable=yes, width=' + ww);
+      }else{ //regular size
+       $('#Viewport').attr('content', 'initial-scale=1.0, maximum-scale=2, minimum-scale=1.0, user-scalable=yes, width=' + ww);
+      }
+    }
+    });
+    </script>    
 
     <title><%= title %></title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -73,28 +75,7 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
         </ul>        
       </div>
     </div>
-<!--  
-        <div class="navbar navbar-inverse navbar-fixed-top nav-collapse collapse">
-            <div class="navbar-inner">
-            <div id="menu" class="container-fluid">
-              <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </a>
-              <p><a class="brand" href="#"><img src="themes/OpenROV/img/logo.png" class="logo"/>&nbsp;Cockpit</a></p>
-              <p><img id="keyboardpopover" width="30px" class="brand logo" src="themes/OpenROV/img/keyboard.png" data-trigger="hover" data-placement="bottom" rel='popover' title="keyboard commands" html="true" />
-              <p id="servoTilt"></p>
-              <div class="nav-collapse collapse">
-                <ul id="menuitems" class="nav pull-right">
-                  <li><a href="#" id="show-settings">Settings</a></li>
-                  <li><a href="#" id="show-diagnostic">Diagnostic</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-  -->      
+    
         <!-- Main ROW -->
         <div id="main-row" class="container-fluid full-height">
           <div class="row-fluid full-height">
@@ -139,7 +120,7 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
 	    </div>
 
         </div>
-        <textarea class="hidden" id="keyboardInstructions">
+        <div class="hidden" id="keyboardInstructions">
             <p>
                 Use the <i>Up</i>, <i>Down</i>, <i>Left</i>, <i>Right</i>, <i>Shift</i> and <i>Ctrl</i> keys to maneuver.
                 Use <i>1</i>-<i>5</i> to set power. <i>7</i>,<i>8</i> (lift) and <i>9</i>,<i>0</i> (thrust) trim. Space for all stop.
@@ -147,7 +128,7 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
             <p>Use <i>Q</i>, <i>A</i>, <i>Z</i> to tilt servo.</p>
             <p>Use <i>o</i>, <i>p</i> to increase brightness of lights.</p>
 		    <p>Use <i>l</i> to toggle callibration lasers.</p>
-        </textarea>
+        </div>
 
         
         <!-- Le javascript
@@ -260,16 +241,13 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
         //We have a contract for centralizing all keyboad instructions. This code
         //wires that content to where we display it in a popover.
         $('#keyboardpopover').hover(function(){
-            $('#keyboardpopover').attr('data-content',$('#keyboardInstructions').text());
+            $('#keyboardpopover').attr('data-content',$('#keyboardInstructions').html());
         });
 		
         $("[rel='popover']").popover();
 	
-	$('#keyboardInstructions').append('<p><i>capslock</i> to toggle heads up display</p>');
-	KEYS[20] = {keydown: function() {  //capslog
-   		 $('.hud').toggleClass('hidden');
-		 console.log("capslock");
-		},keyup: function() {  //capslog
+	$('#keyboardInstructions').append('<p><i>\\</i> to toggle heads up display</p>');
+	KEYS[220] = {keydown: function() {  //capslog
    		 $('.hud').toggleClass('hidden');
 		 console.log("capslock");
 		}};	
