--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -81,8 +81,7 @@
           <div class="row-fluid full-height">
             <div class="span9 border full-height" id="outter-videocontainer">
               <div id="video-container" class="full-height center pagination-centered" border='1'>
-                <!--img src="themes/OpenROV/img/no_camera.jpg" alt="OpenROV" id="video"/-->
-                <video id="video" poster="" autoplay>
+                <video id="video" class="full-height center pagination-centered" poster="themes/OpenROV/img/no_camera.jpg" autoplay>
                 </video>                
               </div>
             </div>
