more video tweaks

--- a/src/static/themes/OpenROV/css/style.css
+++ b/src/static/themes/OpenROV/css/style.css
@@ -182,7 +182,8 @@ img.center {
 #video { 
   border: 2px solid black;
   background-color: black;
-  max-width: 100%;  
+  max-width: 100%;
+  vertical-align: middle;
 }
 
 #video-container{
@@ -192,7 +193,14 @@ img.center {
   vertical-align: top;
 }
 
-
+/* The ghost, nudged to maintain perfect centering */
+#video-container:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -0.25em; /* Adjusts for spacing */
+}
 
 #main-row {
   height: 80%;
