--- a/dashboard/src/views/index.ejs
+++ b/dashboard/src/views/index.ejs
@@ -24,7 +24,7 @@
               </a>
               <p><a class="brand" href="#"><img src="themes/OpenROV/img/logo.png" class="logo"/>&nbsp;Dashboard</a></p>
               <div class="nav-collapse collapse">
-                <ul class="nav pull-right">
+                <ul class="nav pull-right" id="menu-bar">
                   <!--<li><a href="#" id="show-diagnostic">Diagnostic</a></li>-->
                 </ul>
               </div><!--/.nav-collapse -->
