Added water type toggle button

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -115,7 +115,8 @@
 	    <div class="settings-block">
 	      <h4>Callibration</h4>
 	      <a href="#" class="btn" id="callibrate_compass">Callibrate Compass</a>
-	      <a href="#" class="btn" id="zero_depth">Zero Depth</a>	      
+	      <a href="#" class="btn" id="zero_depth">Zero Depth</a>
+	      <a heff="#" class="btn" id="toggle_watertype">Water</a>
 	    </div>
 
         </div>
