--- a/src/static/themes/OpenROV/css/style.css
+++ b/src/static/themes/OpenROV/css/style.css
@@ -5,6 +5,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
+  background-color: black;
 }
 
 .testoverlay {
@@ -346,4 +347,9 @@ img.center {
 	height: 30px;
 	bottom: 0px;
 	z-index: 5;
+}
+
+#rov_status_panel .well {
+  background-color: black;
+  color: blue;
 }
