Added ability to emphasis telemetry items

--- a/src/static/themes/OpenROV/css/style.css
+++ b/src/static/themes/OpenROV/css/style.css
@@ -353,3 +353,9 @@ img.center {
   background-color: black;
   color: blue;
 }
+
+.important {
+  font-size: 30px;
+  font-style: !important;
+  
+}
