Adding scafolding for Plugin Manager and cleaning up registration for plugin settings - why do we rely on text in a h4 tag???

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -101,9 +101,10 @@
 
         <!-- SETTINGS -->
         <div class="drop-in-right" id="settings">
-          <div class="back-button"></div><h3>Settings</h3>
-	    <h4>Runtime Settings:</h4>
-	    </div>
+          <div class="back-button"></div>
+            <h2>Settings</h2><br><br>
+            <h3>Runtime Settings:</h3>
+            <div id="plugin-settings"><div>
           </div>
         </div>
 
