--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -102,9 +102,8 @@
         <!-- SETTINGS -->
         <div class="drop-in-right" id="settings">
           <div class="back-button"></div>
-            <h2>Settings</h2><br><br>
-            <h3>Runtime Settings:</h3>
-            <div id="plugin-settings"><div>
+            <h2>Settings</h2>
+            <div class="accordion" id="plugin-settings"></div>
           </div>
         </div>
 
