Adding first shot of heads up code

--- a/src/plugins/headsup-menu/public/css/style.css
+++ b/src/plugins/headsup-menu/public/css/style.css
@@ -29,6 +29,7 @@
     border:  1px solid green;
     margin: 5px;
     padding: 5px 10px;
+    z-index: 1000;
 }
 
 #headsup-menu-container .menuRow.active {
