--- a/src/plugins/headsup-menu/public/css/style.css
+++ b/src/plugins/headsup-menu/public/css/style.css
@@ -1,5 +1,5 @@
 #headsup-menu-base {
-    z-index: 3;
+    z-index: 4;
     top: 0px;
     left: 0px;
     position: absolute;
@@ -14,7 +14,7 @@
     clear: both;
     white-space: nowrap;
     border: 2px solid black;
-    padding: 4px;
+    padding: 10px;
     font-size: large;
     background-color: beige;
     border-radius: 4px;
@@ -26,13 +26,20 @@
 }
 #headsup-menu-container .menuRow {
     text-align: left;
-    border:  1px solid green;
-    margin: 5px;
-    padding: 5px 10px;
-    z-index: 1000;
 }
 
 #headsup-menu-container .menuRow.active {
     background-color: #6fbef5;
 }
 
+#headsup-menu-container button.btn-block {
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: left;
+}
+
+#headsup-menu-container button.btn {
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+}
