--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      
+
     <!-- The following viewport code is intended to fullscreen the cockpit and prevent scrolling -->
     <meta id="Viewport" name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <script type='text/javascript' src="js/libs/jquery.min.js"></script>
-    <script type='text/javascript' src="js/libs/jquery-ui.min.js"></script>	
+    <script type='text/javascript' src="js/libs/jquery-ui.min.js"></script>
 
     <script type="text/javascript">
-    // this code again helps prevent scrolling and sets viewport for mobile 
+    // this code again helps prevent scrolling and sets viewport for mobile
     $(function(){
     if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
       var ww = ( $(window).width() < window.screen.width ) ? $(window).width() : window.screen.width; //get proper width
@@ -22,18 +22,18 @@
       }
     }
     });
-    </script>    
+    </script>
 
     <title><%= title %></title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/bootstrap-responsive.css" rel="stylesheet">        
+        <link href="css/bootstrap-responsive.css" rel="stylesheet">
         <link rel="stylesheet" href="themes/OpenROV/css/style.css">
         <link href="css/ui-lightness/jquery-ui-1.8.23.custom.css" rel="stylesheet" />
     <% for(var i=0; i<styles.length; i++) {%>
     <link rel="stylesheet" href="<%= styles[i] %>"><% } %>
-    
+
   </head>
-  
+
   <script src="js/libs/eventemitter2.js"></script>
   <script>
 
@@ -60,8 +60,8 @@
   <script type="text/javascript" src="<%= scripts[i] %>"></script><% } %>
 
   <body>
-  
-  
+
+
       <div class="navbar navbar-inverse navbar-fixed-top nav-collapse">
       <div class="navbar-inner">
         <a class="brand" href="#"><img src="themes/OpenROV/img/logo.png" class="logo"/>&nbsp;Cockpit</a>
@@ -72,10 +72,10 @@
         <ul id="menuitems" class="nav pull-right">
           <li><a href="#" id="show-settings">Settings</a></li>
           <li><a href="#" id="show-diagnostic">Diagnostic</a></li>
-        </ul>        
+        </ul>
       </div>
     </div>
-    
+
         <!-- Main ROW -->
         <div id="main-row" class="container-fluid full-height">
           <div class="row-fluid full-height">
@@ -97,7 +97,7 @@
 		</div>
 	    </div>
         </div>
-	
+
 
         <!-- SETTINGS -->
         <div class="drop-in-right" id="settings">
@@ -115,7 +115,7 @@
 	    <div class="settings-block">
 	      <h4>Callibration</h4>
 	      <a href="#" class="btn" id="callibrate_compass">Callibrate Compass</a>
-	      <a href="#" class="btn" id="zero_depth">Zero Depth</a>      
+	      <a href="#" class="btn" id="zero_depth">Zero Depth</a>
 	    </div>
 
         </div>
@@ -129,14 +129,14 @@
 		    <p>Use <i>l</i> to toggle callibration lasers.</p>
         </div>
 
-        
+
         <!-- Le javascript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
 
 
 	<script> //Load conditional js files
-	  
+
 	</script>
 
         <script>
@@ -145,34 +145,36 @@
 	    if (window.io == undefined) {
 	      alert("detected no socket found");
 	      var mysocket = function(){
-		
+
 	      }
 	      mysocket.prototype.emit = function(x){console.log(x);};
 	      mysocket.prototype.emit = function(x,y){console.log(x);console.log(y);};
 	      simevents = new Object();
 	      mysocket.prototype.on = function(x,y){
-		console.log("registering " + x);
-		if (simevents.x == undefined) {
+
+		if (simevents[x] == undefined) {
+      console.log("initalizing " +x);
 		  simevents[x] = [];
 		}
 		simevents[x].push(y);
+    console.log("registering " + x + " in index " + simevents[x].length );
 	      };
 
 	      var io = new mysocket();
 	      var socket = new mysocket();
 	      CONFIG = new Object();
 	      CONFIG.sample_freq = 20;
-	      
+
 	    } else {
             var socket = window.io.connect();
 	    }
 
             /* ------------------------------------------
-               settings 
+               settings
             */
             var options = {};
 	    var keyboard = null;
-            $("#show-settings").click(function() { 
+            $("#show-settings").click(function() {
               $("#settings").show('fold');
               cockpit.sendUpdateEnabled=false;
               Mousetrap.bind('esc', hideSettings);
@@ -181,7 +183,7 @@
 
             $("#settings .back-button").click(function() {
               hideSettings();
-            });	    
+            });
 
             function hideSettings() {
               $("#settings").hide('fold');
@@ -189,13 +191,13 @@
               Mousetrap.unbind('esc');
 	      keyboardHandler.bindKeys()
             }
-	    
+
               /* ------------------------------------------
                diagnostic
                */
               var options = {};
-	      
-	      
+
+
               $("#show-diagnostic").click(function() {
                   $("#diagnostic").show('fold');
                   cockpit.sendUpdateEnabled=false;
@@ -205,8 +207,8 @@
 
               $("#diagnostic .back-button").click(function() {
                   hideDiagnostic();
-              });    
-	      
+              });
+
               function hideDiagnostic() {
                   $("#diagnostic").hide('fold');
                   cockpit.sendUpdateEnabled=true;
@@ -214,49 +216,49 @@
 		  keyboardHandler.bindKeys();
               }
 
- 	      
+
 	  $('#zero_depth').click(function() {
             socket.emit('depth_zero');
           });
-	  
+
 	  $('#callibrate_compass').click(function() {
             socket.emit('compass_callibrate');
           });
-	  	    
+
 	    //plugin hooks
             setupFrameHandling(socket);
 	   var cockpit = new Cockpit(socket);
-	  
 
-	   
-          });	  
-          
+
+
+          });
+
         //We have a contract for centralizing all keyboad instructions. This code
         //wires that content to where we display it in a popover.
         $('#keyboardpopover').hover(function(){
             $('#keyboardpopover').attr('data-content',$('#keyboardInstructions').html());
         });
-		
+
         $("[rel='popover']").popover();
-	
+
 	$('#keyboardInstructions').append('<p><i>\\</i> to toggle heads up display</p>');
 	KEYS[220] = {keydown: function() {  //capslog
    		 $('.hud').toggleClass('hidden');
 		 console.log("capslock");
-		}};	
-		
-		
+		}};
+
+
 		// The next session draws the video img to a canvas which is then managed by the GPU
 		// and is much faster than the browser painting the img tag.
         var canvas = document.getElementById('video-canvas');
         var srcImg = document.getElementById('video');
         var videocontainer = $('#video-container');
         var newCanvas, newImg;
-        
+
         setInterval(function(){
             var width = videocontainer.innerWidth();
             var height = videocontainer.innerHeight();
-        
+
             canvas.width = width;
             canvas.height = height;
             var ctx = canvas.getContext('2d');
@@ -264,7 +266,7 @@
             var proportionalHeight = width * srcImg.height / srcImg.width
             ctx.drawImage(srcImg,0,(canvas.height-proportionalHeight)/2,width, proportionalHeight);
         },64); //only need to redraw at the framerate of source video
-		
+
         </script>
 
     </body>
