--- a/src/plugins/headsup-menu/public/css/style.css
+++ b/src/plugins/headsup-menu/public/css/style.css
@@ -43,3 +43,13 @@
     -moz-border-radius: 0;
     border-radius: 0;
 }
+
+#headsup-menu-container .menuRow .custom-block {
+    display: block;
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
