--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -34,27 +34,20 @@
 
   </head>
 
-  <script src="js/libs/eventemitter2.js"></script>
-  <script>
-
-  	    cockpitEventEmitter = new EventEmitter2();
-  </script>
-
-        <script type='text/javascript' src="js/libs/bootstrap.min.js"></script>
-        <script type='text/javascript' src="js/libs/mousetrap.min.js"></script>
-        <script type='text/javascript' src='js/libs/knockout-2.1.0.js'></script>
-	<script type='text/javascript' src='js/libs/gamepad.js'></script>
-        <script type='text/javascript' src='js/utilities.js'></script>
-        <script type='text/javascript' src="js/keypad.js"></script>
-        <script type='text/javascript' src="js/gamepad.js"></script>
-        <script type='text/javascript' src="js/frame.js"></script>
-	<script type='text/javascript' src="js/cockpit.js"></script>
-	<script src='js/libs/db.js'></script>
-	<script type='text/javascript' src="js/libs/IndexedDBShim.min.js"></script>
-        <script src="/config.js"></script>
-	<script src="/socket.io/socket.io.js"></script>
-
-
+  <script type='text/javascript' src="js/libs/eventemitter2.js"></script>
+  <script type='text/javascript' src="js/libs/bootstrap.min.js"></script>
+  <script type='text/javascript' src="js/libs/mousetrap.min.js"></script>
+  <script type='text/javascript' src='js/libs/knockout-2.1.0.js'></script>
+  <script type='text/javascript' src='js/libs/gamepad.js'></script>
+  <script type='text/javascript' src='js/utilities.js'></script>
+  <script type='text/javascript' src="js/keypad.js"></script>
+  <script type='text/javascript' src="js/gamepad.js"></script>
+  <script type='text/javascript' src="js/frame.js"></script>
+  <script type='text/javascript' src="js/cockpit.js"></script>
+  <script type='text/javascript' src='js/libs/db.js'></script>
+  <script type='text/javascript' src="js/libs/IndexedDBShim.min.js"></script>
+  <script type='text/javascript' src="/config.js"></script>
+  <script type='text/javascript' src="/socket.io/socket.io.js"></script>
 
   <% for(var i=0; i<scripts.length; i++) {%>
   <script type="text/javascript" src="<%= scripts[i] %>"></script><% } %>
@@ -224,10 +217,11 @@
           });
 
 	    //plugin hooks
-            setupFrameHandling(socket);
-	   var cockpit = new Cockpit(socket);
+           setupFrameHandling(socket);
+           var cockpit = new Cockpit(socket);
+            var gamepadHandler = new GamePad(cockpit);
 
-
+           window._cockpit = cockpit;
 
           });
 
