--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -163,12 +163,10 @@
                settings
             */
             var options = {};
-	    var keyboard = null;
             $("#show-settings").click(function() {
               $("#settings").show('fold');
               cockpit.sendUpdateEnabled=false;
               Mousetrap.bind('esc', hideSettings);
-	      keyboardHandler.unbindKeys();
             });
 
             $("#settings .back-button").click(function() {
@@ -179,7 +177,6 @@
               $("#settings").hide('fold');
               cockpit.sendUpdateEnabled = true;
               Mousetrap.unbind('esc');
-	      keyboardHandler.bindKeys()
             }
 
               /* ------------------------------------------
@@ -192,7 +189,6 @@
                   $("#diagnostic").show('fold');
                   cockpit.sendUpdateEnabled=false;
                   Mousetrap.bind('esc', hideDiagnostic);
-		  keyboardHandler.unbindKeys();
               });
 
               $("#diagnostic .back-button").click(function() {
@@ -203,7 +199,6 @@
                   $("#diagnostic").hide('fold');
                   cockpit.sendUpdateEnabled=true;
                   Mousetrap.unbind('esc');
-		  keyboardHandler.bindKeys();
               }
 
 
@@ -218,6 +213,17 @@
 	    //plugin hooks
            setupFrameHandling(socket);
            var cockpit = new Cockpit(socket);
+
+            $('#keyboardInstructions').append('<p><i>\\</i> to toggle heads up display</p>');
+            cockpit.emit('inputController.register',
+              {
+                name: "main.toggleHeadsUpDisplay",
+                description: "Toggle the heads-up-display on/off",
+                defaults: { keyboard: '\\' },
+                down: function() {
+                  $('.hud').toggleClass('hidden');
+                }
+              });
           });
 
         //We have a contract for centralizing all keyboad instructions. This code
@@ -227,17 +233,6 @@
         });
 
         $("[rel='popover']").popover();
-
-	$('#keyboardInstructions').append('<p><i>\\</i> to toggle heads up display</p>');
-        rov.cockpit.emit('inputController.register',
-          {
-            name: "main.toggleHeadsUpDisplay",
-            description: "Toggle the heads-up-display on/off",
-            defaults: { keyboard: ']' },
-            down: function() {
-              $('.hud').toggleClass('hidden');
-            }
-          });
 
 		// The next session draws the video img to a canvas which is then managed by the GPU
 		// and is much faster than the browser painting the img tag.
