--- a/src/plugins/topdowncompass/public/css/topdowncompass.css
+++ b/src/plugins/topdowncompass/public/css/topdowncompass.css
@@ -2,16 +2,12 @@
     display:block;
     width:61px;
     height:76px;
-    position: relative;
-    top:0px;
-    left:400px;
-
+    position:relative;
+    margin:10px;
 }
 
 .compassNeedle{
-    position:absolute;
-    top:0px;
-    left:0px;
+    position:relative;
     background-image: url('compassneedle.png');
     width:61px;
     height:76px;
