Updating ui style to match dashboard and OE

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -58,7 +58,7 @@
 
       <div class="navbar navbar-inverse navbar-fixed-top nav-collapse">
       <div class="navbar-inner">
-        <a class="brand" href="#"><img src="themes/OpenROV/img/logo.png" class="logo"/>&nbsp;Cockpit</a>
+        <a class="brand" href="#"><img src="themes/OpenROV/img/openrov.png" class="logo"/><span class="navbar-titel">Cockpit</span></a>
         <ul class="nav" id="navtoolbar">
           <li><a href="#"><img id="keyboardpopover" src="themes/OpenROV/img/keyboard.png" data-trigger="hover" data-placement="bottom" rel='popover' title="keyboard commands" html="true" /></a></li>
           <li><a href="#" id="servoTilt"></a></li>
