--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -116,7 +116,7 @@
         <div class="hidden" id="keyboardInstructions">
             <p>
                 Use the <i>Up</i>, <i>Down</i>, <i>Left</i>, <i>Right</i>, <i>Shift</i> and <i>Ctrl</i> keys to maneuver.
-                Use <i>1</i>-<i>5</i> to set power. <i>7</i>,<i>8</i> (lift) and <i>9</i>,<i>0</i> (thrust) trim. Space for all stop.
+                Use <i>1</i>-<i>5</i> to set power.
             </p>
             <p>Use <i>Q</i>, <i>A</i>, <i>Z</i> to tilt servo.</p>
             <p>Use <i>o</i>, <i>p</i> to increase brightness of lights.</p>
