--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -107,8 +107,8 @@
                 <h4>Pre-Flight Check</h4>
             </div>
 	    <div class="settings-block">
-	      <h4>Callibration</h4>
-	      <a href="#" class="btn" id="callibrate_compass">Callibrate Compass</a>
+	      <h4>Calibration</h4>
+	      <a href="#" class="btn" id="callibrate_compass">Calibrate Compass</a>
 	      <a href="#" class="btn" id="zero_depth">Zero Depth</a>
 	    </div>
 
