--- a/src/plugins/new-ui/public/css/style.css
+++ b/src/plugins/new-ui/public/css/style.css
@@ -67,3 +67,10 @@
     margin-bottom: -25px;
     color: white;
 }
+
+#UI #newui-time {
+    width: 150px;
+    top: -30px;
+    margin-bottom: -25px;
+    color: white;
+}
