Moving time component to polymer

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -49,6 +49,8 @@
 
   <script type='text/javascript' src="bower_components/knockout.validation/Dist/knockout.validation.js"></script>
   <script type='text/javascript' src='js/knockout-extentions.js'></script>
+  <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+
 
   <% for(var i=0; i<scripts.length; i++) {%>
   <script type="text/javascript" src="<%= scripts[i] %>"></script><% } %>
