--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -50,6 +50,7 @@
   <script type='text/javascript' src="bower_components/knockout.validation/Dist/knockout.validation.js"></script>
   <script type='text/javascript' src='js/knockout-extentions.js'></script>
   <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+  <link rel="import" href="bower_components/polymer/polymer.html">
 
 
   <% for(var i=0; i<scripts.length; i++) {%>
