--- a/src/plugins/new-ui/public/css/style.css
+++ b/src/plugins/new-ui/public/css/style.css
@@ -44,6 +44,10 @@ a .navbar-titel {
     margin: 15px;
 }
 
+#newui-depth {
+    top: -20px;
+}
+
 .newui-item h4 {
     text-align: center;
     color: white;
