--- a/src/plugins/new-ui/public/css/style.css
+++ b/src/plugins/new-ui/public/css/style.css
@@ -62,9 +62,18 @@ a .navbar-titel {
 
 .control {
     width: 100%;
-    top: -30px;
-    margin-bottom: -25px;
+    top: -40px;
+    margin-bottom: -35px;
     color: white;
     margin-left: 0;
     margin-right: 0;
+}
+
+#newui-compass {
+    margin-bottom: -45px;
+}
+
+#newui-time {
+    top: -35px;
+    margin-bottom: -30px;
 }
