--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -53,6 +53,8 @@
 
   <link rel="import" href="/webcomponents/video/video.html">
   <link rel="import" href="/webcomponents/horizon/horizon.html">
+  <link rel="import" href="/webcomponents/settings/settings.html">
+  <link rel="import" href="/webcomponents/menu/menu.html">
 
 
   <% for(var i=0; i<scripts.length; i++) {%>
@@ -66,10 +68,12 @@
           <li><a href="#"><img id="keyboardpopover" src="themes/OpenROV/img/keyboard.png" data-trigger="hover" data-placement="bottom" rel='popover' title="keyboard commands" html="true" /></a></li>
           <li><a href="#" id="servoTilt"></a></li>
         </ul>
-        <ul id="menuitems" class="nav pull-right">
-          <li><a href="#" id="show-settings">Settings</a></li>
+
+        <rov-menu id="menuitems" class="nav pull-right">
+          <li><a href="#" id="show-settings" onclick="document.querySelector('rov-settings').open();">Settings</a></li>
           <li><a href="#" id="show-diagnostic">Diagnostic</a></li>
-        </ul>
+        </rov-menu>
+
       </div>
     </div>
 
@@ -95,13 +99,8 @@
       </div>
     </div>
 
-    <!-- SETTINGS -->
-    <div class="drop-in-right" id="settings">
-      <div class="back-button"></div>
-        <h2>Settings</h2>
-        <div class="accordion" id="plugin-settings"></div>
-      </div>
-    </div>
+    <rov-settings id="plugin-settings">
+    </rov-settings>
 
     <div class="drop-in-right" id="diagnostic">
       <div class="back-button"></div><h3>Diagnostics</h3>
